Adjusted design, fixed a couple of small issues, uploaded Zach's new SVG (more accurate/less opacity), added color to the navbar, and changed scanner.js line #8 from visibility:hidden to display:none.

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -4,8 +4,7 @@
  * Dependencies: Stylesheet for "mobile.HTML/PHP".
  */
 body {
-  background-size: cover;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: ghostwhite;
 }
 td
 {
@@ -19,11 +18,25 @@ td
     color: black;
 }
 
-.navbar
-{
-    margin-bottom: 0px;
+.navbar {
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
+.navbar-default {
+  background-color: #233b79;
+  border-color: #fcd955;
+  border-bottom-width: medium;
+  border-left-width: medium;
+  border-right-width: medium;
+  border-top-width: 0px;
+  border-bottom-style: solid;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
+select {
+  margin-top: -10px;
+}
 .panel
 {
     margin-top: 15px;
@@ -63,12 +76,18 @@ td
 
 .mobile
 {
-    height: 59%;
-    display: inherit;
-    overflow-y: scroll;
-    margin: 0px;
+  background-image: url('../img_assets/pelli.svg');
+  background-size: 70% 90%;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 69%;
+  display: inherit;
+  overflow-y:scroll;
+  margin: 0px;
 }
-
+#items {
+  opacity: 100%;
+}
 .navbar-nav > li
 {
     margin-top: 10px;
